# osm-vis

./: .gitignore  .htaccess  README.md  bower.json  gulpfile.js  package-lock.json  package.json
data-mining/naturalearth/: run.js
data-mining/osm-node-changes-per-area/: README.md  osm-node-changes-per-area.cabal  osm-node-changes-per-area.hs  tool.cabal  tool.hs
data-mining/osm-tags-history-wiki/: README.md  osm-tags-history-wiki.cabal  osm-tags-history-wiki.hs  tool.cabal  tool.hs
data-mining/osm-tags-wiki-vs-osmdata/: .index.js.swp  README.md  index.js  package.json
data-mining/osm-tags-word-frequency-wiki/: README.md  tool.cabal  tool.hs
data-mining/osm-tags-word-frequency-wiki/stopwords/: de.txt  en.txt  fr.txt  sv.txt
data-mining/osmstats/: run.js
data/tmp/: r60105.geojson  r60105.topojson  w150834648.topojson  w154937898.topojson  w254154168.topojson  w26946230.geojson  w26946230.topojson  w5182648.topojson
docs/: automatic_data_mining.md
osm-changes-map/: index.html  script.js  style.css  style.scss
osm-tags-history-wiki/: index.html  script.js  style.css  style.scss
src/ion.rangeSlider-skins/: ion.rangeSlider.skinFlatNew.css
visualizations/osm-changes-map/: index.html  script.js  style.scss
visualizations/osm-changes-per-day/: index.html  script.js  style.scss
visualizations/osm-history-of-an-element/: index.html  script.js  style.scss
visualizations/osm-tags-history-wiki/: index.html  script.js  style.scss
visualizations/osm-tags-wiki-vs-osmdata/: data.csv  index.html  script.js  style.css  style.scss
visualizations/osm-tags-word-frequency-wiki/: index.html  script.js  style.scss
www/: definitions.scss  index.html  script.js  style.css  style.scss
www-dist/data/tmp/: w150834648.geojson  w254154168.geojson
