name:           osm-changesets-per-area
version:        0.1.0
homepage:       https://github.com/mocnik-science/osm-vis
bug-reports:    https://github.com/mocnik-science/osm-vis/issues
synopsis:       A tool to extract spatial and temporal information from OSM replication diffs
description:
  The tool extracts the changes on nodes from OSM replication diffs and
  aggregates them by space and time
license:        GPL-3
license-file:   LICENSE.md
author:         Franz-Benjamin Mocnik <mail@mocnik-science.net>
maintainer:     Franz-Benjamin Mocnik <mail@mocnik-science.net>
copyright:      2016 Franz-Benjamin Mocnik
category:       OSM, visualization, replication diff, space, time
cabal-version:  >= 1.20
build-type:     Simple
extra-source-files:
  README.md

executable osm-node-changes-per-area
  main-is:             osm-node-changes-per-area.hs
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -O2
    -threaded
    -with-rtsopts=-N
  build-depends:
    base,
    aeson >= 1.0.2.1,
    bytestring >= 0.10.8.1,
    chorale >= 0.1.7,
    download-curl >= 0.1.4,
    hexml >= 0.3,
    safe >= 0.3.10,
    time >= 1.6.0.1,
    zlib >= 0.6.1.2
