name:           osm-tags-history-wiki
version:        0.1.0
homepage:       https://github.com/mocnik-science/osm-vis
bug-reports:    https://github.com/mocnik-science/osm-vis/issues
synopsis:       A tool to extract the tag history from the OSM wiki
description:
  The tool extracts the creation and the modifications of OSM tags, i.e. the tag
  history from the OSM wiki
license:        GPL-3
license-file:   LICENSE.md
author:         Franz-Benjamin Mocnik <mail@mocnik-science.net>
maintainer:     Franz-Benjamin Mocnik <mail@mocnik-science.net>
copyright:      2016 Franz-Benjamin Mocnik
category:       OSM, visualization, tag, history, wiki
cabal-version:  >= 1.20
build-type:     Simple
extra-source-files:
  README.md

executable osm-tags-history-wiki
  main-is:             osm-tags-history-wiki.hs
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -O2
    -threaded
    -with-rtsopts=-N
  build-depends:
    base,
    aeson >= 1.0.2.1,
    bytestring >= 0.10.8.1,
    chorale >= 0.1.7,
    curl >= 0.1.4,
    safe >= 0.3.10,
    scalpel >= 0.4,
    unordered-containers >= 0.2.7.1,
    vector >= 0.11
