name:           tool
version:        0.1.0
cabal-version:  >= 1.20
build-type:     Simple

executable tool
  main-is:             tool.hs
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -O2
    -threaded
    -with-rtsopts=-N
  build-depends:
    base,
    aeson >= 1.0.2.1,
    bytestring >= 0.10.8.1,
    chorale >= 0.1.7,
    curl >= 0.1.4,
    scalpel >= 0.4,
    time >= 1.6.0.1
